<resources>
    <string name="app_name">PI_Movil</string>
    <string name="titulo">Almacén</string>


    <string name="txt_Usuario">Introduzca su nombre o usuario</string>
    <string name="txt_Contraseña">Introduzca su contraseña</string>
    <string name="txt_nombreAlumno">Nombre del Alumno</string>
    <string name="txt_apPat">Apellido Paterno</string>
    <string name="txt_apMat">Apellido Materno</string>
    <string name="txt_telefono">Telefono</string>
    <string name="txt_herramienta">Herramienta</string>
    <string name="txt_fecha">Fecha de Salida</string>
    <string name="txt_horaSalida">Hora de Salida</string>
    <string name="txt_horaEntrega">Hora de Entrega</string>
    <string name="txt_nombreMaestro">Nombre del Maestro</string>
    <string name="txt_pelayo">Daniel Eduardo Pelayo Gómez 22300954 6H</string>
    <string name="txt_ulises">Ulises Alberto Macías Ramírez 22300928 6H</string>
    <string name="txt_creador">Creadores:</string>
    <string name="txt_cont">Contacto:</string>
    <string name="txt_contactoPel">a22300954@ceti.mx</string>
    <string name="txt_contactoUli">a22300928@ceti.mx</string>
    <string name="txt_button_llamar">Llamar</string>


    <string name="button_ingresar">Ingresar</string>
    <string name="button_guardar">Guardar</string>
    <string name="button_limpiar">Limpiar</string>
    <string name="button_sig">Siguiente</string>
    <string name="button_ant">Anterior</string>
    <string name="button_gc">Guardar Cambios</string>
    <string name="button_eliminar">Eliminar</string>


</resources>