<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Inicio">


    <EditText
        android:id="@+id/ed_user"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:inputType="text"
        android:hint="@string/txt_Usuario"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/txt_Contraseña"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/button_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:backgroundTint="@color/rojito"
        android:text="@string/button_ingresar"
        />


</LinearLayout>