<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".creadores">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_creador"
        android:textSize="35sp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/et_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_pelayo"
        android:textColor="@color/black"
        android:textSize="35sp" />
    <TextView
        android:id="@+id/et_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Y"
        android:textColor="@color/black"
        android:textSize="35sp" />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/et_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_ulises"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="304dp"
        android:layout_height="218dp"
        android:layout_gravity="center"
        android:src="@drawable/ulises_pelayo" />

</LinearLayout>